v0.1x.x:
- Lots of code cleanup regarding resetting, some stuff slightly adjusted to match intended functionality
- Fixed #41, and an unlisted bug where windows would lose their borderless when resetting from a fullscreened window sometimes

v0.14.1:
- Made a work-around for #41, but still not solved. You shouldn't have to restart instances or Julti to continue using an instance which is stuck.

v0.14.0:
- Added some guide text to hotkey settings
- Added fullscreen hotkey
    - Should not be the same as the actual fullscreen hotkey
    - Lets Julti know that MC is in fullscreen so it can handle the resetting
    - Lets you turn off the "use fullscreen" option so you can have the benefits of ultra speed borderless resetting but still use fullscreen in the run
- Added option for Unpause on Switch (#40)
- Removed brine

v0.13.1:
- Now asking Windows where the mouse is because sometimes java doesn't have a good answer
- Made resetting a fullscreened instance potentially less jank as frick

v0.13.0:
- Added fullscreen mode (experimental)
- Cleaned up a some built in wall code and options

v0.12.0:
- Big refactor and changes to the way switching to wall works:
    - Added OBS projector name format option
    - Changed wall activation method for Julti wall to fix it sometimes failing to activate
- Refactor dirt cover logic and potentially fix a dirt cover issue (#36)
- Removed Hero

v0.11.5:
- Removed auto clear worlds option, replacing with a clear worlds button on the main GUI
- Sorted main menu buttons
- Addeded Herobrine

v0.11.4:
- Removed maximize option, now on by default for non-borderless
- Added Herobrine

v0.11.3:
- Overhauled the options GUI visuals
- Julti GUI will now remember the location it was in when re-opened
- Added more locations for auto-detecting MultiMC/Prism Launcher.

Changes in v0.11.2:
- Dirt Cover % setting now actually works

Changes in v0.11.1:
- Major dirt cover fix, whoopsie

Changes in v0.11.0: