@@ -595,9 +595,6 @@ public class OptionsGUI extends JFrame {
         panel.add(GUIUtil.leftJustify(GUIUtil.createCheckBoxFromOption("Use Borderless", "useBorderless")));
         panel.add(GUIUtil.createSpacer());
 
-        panel.add(GUIUtil.leftJustify(GUIUtil.createCheckBoxFromOption("Use Fullscreen (Experimental)", "useFullscreen")));
-        panel.add(GUIUtil.createSpacer());
-
         panel.add(GUIUtil.createSeparator());
         panel.add(GUIUtil.createSpacer());
 
